--- a/infra/k8s/grafana-config.yaml
+++ b/infra/k8s/grafana-config.yaml
@@ -40,3 +40,21 @@ data:
               matcherRegex: '"trace_id":"(\w+)"'
               name: TraceID
               url: '$${__value.raw}'
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: grafana-dashboards-provider
+  namespace: battlescope
+data:
+  dashboards.yaml: |
+    apiVersion: 1
+    providers:
+      - name: 'default'
+        orgId: 1
+        folder: ''
+        type: file
+        disableDeletion: false
+        editable: true
+        options:
+          path: /etc/grafana/dashboards
