--- a/infra/k8s/redis-statefulset.yaml
+++ b/infra/k8s/redis-statefulset.yaml
@@ -33,9 +33,9 @@ spec:
       labels:
         app: redis
       annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/port: "9121"
-        prometheus.io/path: "/metrics"
+        prometheus.io/scrape: 'true'
+        prometheus.io/port: '9121'
+        prometheus.io/path: '/metrics'
     spec:
       containers:
         - name: redis
@@ -100,7 +100,7 @@ spec:
           imagePullPolicy: IfNotPresent
           env:
             - name: REDIS_ADDR
-              value: "localhost:6379"
+              value: 'localhost:6379'
             - name: REDIS_PASSWORD
               valueFrom:
                 secretKeyRef:
