--- a/infra/k8s/typesense-secret.yaml
+++ b/infra/k8s/typesense-secret.yaml
@@ -7,4 +7,4 @@ type: Opaque
 stringData:
   # Change this to a strong random key in production
   # Generate with: openssl rand -base64 32
-  api-key: "battlescope-search-key-change-in-production"
+  api-key: 'battlescope-search-key-change-in-production'
