--- a/backend/search-sync/Dockerfile
+++ b/backend/search-sync/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /app
 # Copy package files
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml .npmrc ./
 COPY packages/database/package.json ./packages/database/
+COPY packages/esi-client/package.json ./packages/esi-client/
 COPY packages/search/package.json ./packages/search/
 COPY packages/shared/package.json ./packages/shared/
 COPY backend/search-sync/package.json ./backend/search-sync/
@@ -15,6 +16,7 @@ RUN corepack enable pnpm && pnpm install --frozen-lockfile
 
 # Copy source code
 COPY packages/database ./packages/database
+COPY packages/esi-client ./packages/esi-client
 COPY packages/search ./packages/search
 COPY packages/shared ./packages/shared
 COPY backend/search-sync ./backend/search-sync
@@ -22,6 +24,7 @@ COPY tsconfig.base.json ./
 
 # Build all packages
 RUN pnpm --filter @battlescope/database run build && \
+    pnpm --filter @battlescope/esi-client run build && \
     pnpm --filter @battlescope/search run build && \
     pnpm --filter @battlescope/shared run build && \
     pnpm --filter @battlescope/search-sync run build
@@ -34,6 +37,7 @@ WORKDIR /app
 # Copy package files
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml .npmrc ./
 COPY packages/database/package.json ./packages/database/
+COPY packages/esi-client/package.json ./packages/esi-client/
 COPY packages/search/package.json ./packages/search/
 COPY packages/shared/package.json ./packages/shared/
 COPY backend/search-sync/package.json ./backend/search-sync/
@@ -43,6 +47,7 @@ RUN corepack enable pnpm && pnpm install --frozen-lockfile --prod
 
 # Copy built artifacts from builder
 COPY --from=builder /app/packages/database/dist ./packages/database/dist
+COPY --from=builder /app/packages/esi-client/dist ./packages/esi-client/dist
 COPY --from=builder /app/packages/search/dist ./packages/search/dist
 COPY --from=builder /app/packages/shared/dist ./packages/shared/dist
 COPY --from=builder /app/backend/search-sync/dist ./backend/search-sync/dist
