--- a/backend/search-sync/package.json
+++ b/backend/search-sync/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@battlescope/database": "workspace:*",
+    "@battlescope/esi-client": "workspace:*",
     "@battlescope/search": "workspace:*",
     "@battlescope/shared": "workspace:*",
+    "kysely": "^0.26.3",
+    "pg": "^8.11.3",
     "pino": "^9.5.0",
     "typesense": "^1.8.2"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
+    "@types/pg": "^8.11.10",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
