--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -29,12 +29,12 @@
     "fastify-type-provider-zod": "^2.0.0",
     "ioredis": "^5.3.2",
     "pino": "^8.17.0",
-    "yaml": "^2.8.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@fastify/type-provider-typebox": "^4.0.0",
     "@types/node": "^20.11.30",
-    "tsx": "^4.7.0"
+    "tsx": "^4.7.0",
+    "yaml": "^2.8.1"
   }
 }
