--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -355,7 +355,7 @@ jobs:
   # Job 7: Build and Push Docker Images (only on main branch)
   publish-images:
     name: Build & Push Docker Images
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm  # GitHub-hosted ARM64 runner (requires GitHub Team/Enterprise)
     needs: [lint, typecheck, build, test-unit, test-integration]
     if: github.ref == 'refs/heads/main'
     strategy:
@@ -425,11 +425,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm64
-
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -454,7 +449,7 @@ jobs:
           context: ${{ matrix.context }}
           file: ${{ matrix.dockerfile }}
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64  # Native ARM64 build on ARM runner
           build-args: ${{ matrix.build_args }}
           tags: |
             docker.io/${{ secrets.DOCKERHUB_USERNAME }}/battlescope-${{ matrix.name }}:${{ github.sha }}
@@ -469,7 +464,7 @@ jobs:
           context: ${{ matrix.context }}
           file: ${{ matrix.dockerfile }}
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64  # Native ARM64 build on ARM runner
           tags: |
             docker.io/${{ secrets.DOCKERHUB_USERNAME }}/battlescope-${{ matrix.name }}:${{ github.sha }}
             docker.io/${{ secrets.DOCKERHUB_USERNAME }}/battlescope-${{ matrix.name }}:latest
