--- a/infra/k8s/prometheus-deployment.yaml
+++ b/infra/k8s/prometheus-deployment.yaml
@@ -18,7 +18,8 @@ spec:
       serviceAccountName: prometheus
       containers:
         - name: prometheus
-          image: prom/prometheus:v2.49.1
+          image: prom/prometheus:latest
+          imagePullPolicy: Always
           args:
             - '--config.file=/etc/prometheus/prometheus.yml'
             - '--storage.tsdb.path=/prometheus'
