--- a/infra/k8s/jaeger-deployment.yaml
+++ b/infra/k8s/jaeger-deployment.yaml
@@ -17,7 +17,8 @@ spec:
     spec:
       containers:
         - name: jaeger
-          image: jaegertracing/all-in-one:1.54
+          image: jaegertracing/all-in-one:latest
+          imagePullPolicy: Always
           env:
             - name: COLLECTOR_OTLP_ENABLED
               value: 'true'
