--- a/infra/k8s/loki-deployment.yaml
+++ b/infra/k8s/loki-deployment.yaml
@@ -123,7 +123,8 @@ spec:
     spec:
       containers:
         - name: loki
-          image: grafana/loki:2.9.3
+          image: grafana/loki:latest
+          imagePullPolicy: Always
           args:
             - '-config.file=/etc/loki/loki.yaml'
           ports:
