--- a/infra/k8s/otel-collector-deployment.yaml
+++ b/infra/k8s/otel-collector-deployment.yaml
@@ -17,7 +17,8 @@ spec:
     spec:
       containers:
         - name: otel-collector
-          image: otel/opentelemetry-collector-contrib:0.94.0
+          image: otel/opentelemetry-collector-contrib:latest
+          imagePullPolicy: Always
           args:
             - '--config=/etc/otel/collector.yaml'
           ports:
