--- a/infra/k8s/prometheus-config.yaml
+++ b/infra/k8s/prometheus-config.yaml
@@ -43,6 +43,13 @@ data:
           - targets: ['postgres:9187']
         scrape_interval: 30s
 
+      # Scrape Typesense metrics
+      - job_name: 'typesense'
+        static_configs:
+          - targets: ['typesense:8108']
+        metrics_path: /metrics.json
+        scrape_interval: 30s
+
       # Note: BattleScope backend services (api, ingest, enrichment, clusterer)
       # push metrics via OTLP to the OTEL Collector, which forwards them to
       # Prometheus using the remote write API. They do not expose /metrics endpoints.
