--- a/infra/k8s/api-deployment.yaml
+++ b/infra/k8s/api-deployment.yaml
@@ -13,10 +13,12 @@ spec:
       labels:
         app: api
     spec:
+      imagePullSecrets:
+        - name: dockerhub-creds
       containers:
         - name: api
           image: docker.io/petdog/battlescope-api:latest
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           command:
             - node
             - dist/backend/api/src/index.js
@@ -28,6 +30,10 @@ spec:
               value: '3000'
             - name: HOST
               value: '0.0.0.0'
+            - name: OTEL_SERVICE_NAME
+              value: 'battlescope-api'
+            - name: OTEL_EXPORTER_OTLP_ENDPOINT
+              value: 'http://otel-collector:4318'
           envFrom:
             - secretRef:
                 name: battlescope-secrets
