--- a/infra/k8s/clusterer-deployment.yaml
+++ b/infra/k8s/clusterer-deployment.yaml
@@ -13,10 +13,12 @@ spec:
       labels:
         app: clusterer
     spec:
+      imagePullSecrets:
+        - name: dockerhub-creds
       containers:
         - name: clusterer
           image: docker.io/petdog/battlescope-clusterer:latest
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           command:
             - node
             - dist/backend/clusterer/src/index.js
@@ -28,6 +30,8 @@ spec:
               value: '3003'
             - name: OTEL_SERVICE_NAME
               value: 'battlescope-clusterer'
+            - name: OTEL_EXPORTER_OTLP_ENDPOINT
+              value: 'http://otel-collector:4318'
           envFrom:
             - secretRef:
                 name: battlescope-secrets
