--- a/infra/k8s/grafana-deployment.yaml
+++ b/infra/k8s/grafana-deployment.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: grafana
     spec:
+      imagePullSecrets:
+        - name: dockerhub-creds
       containers:
         - name: grafana
           image: grafana/grafana:latest
