--- a/infra/k8s/jaeger-deployment.yaml
+++ b/infra/k8s/jaeger-deployment.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: jaeger
     spec:
+      imagePullSecrets:
+        - name: dockerhub-creds
       containers:
         - name: jaeger
           image: jaegertracing/all-in-one:latest
