--- a/infra/k8s/loki-deployment.yaml
+++ b/infra/k8s/loki-deployment.yaml
@@ -121,6 +121,8 @@ spec:
       labels:
         app: loki
     spec:
+      imagePullSecrets:
+        - name: dockerhub-creds
       containers:
         - name: loki
           image: grafana/loki:2.9.3
