--- a/infra/k8s/otel-collector-deployment.yaml
+++ b/infra/k8s/otel-collector-deployment.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: otel-collector
     spec:
+      imagePullSecrets:
+        - name: dockerhub-creds
       containers:
         - name: otel-collector
           image: otel/opentelemetry-collector-contrib:latest
