--- a/infra/k8s/prometheus-deployment.yaml
+++ b/infra/k8s/prometheus-deployment.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: prometheus
     spec:
+      imagePullSecrets:
+        - name: dockerhub-creds
       serviceAccountName: prometheus
       containers:
         - name: prometheus
